# alba-chain

./: .gitignore  README.md  extraction_schema.json  openapi.yaml  package-lock.json  package.json  srs.md
.github/workflows/: frontend-build.yml
.next/server/: server-reference-manifest.json
backend/: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  smoke_test.py  test_extra_shift_src.py  test_extraction_src.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_extra_shift_reject_reason.py
backend/app/: main.py  seed.py
backend/app/api/v1/: __init__.py  contracts.py  employees.py  extra_shifts.py  jobs.py  pay.py  serializers.py  stores.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  agent_job.py  contract.py  extra_shift.py  org.py  work_record.py
backend/app/schemas/: __init__.py  common.py  contract.py  extra_shift.py  job.py  org.py  pay.py  work_record.py
backend/app/services/: contract_service.py  extraction_service.py  extraction_spec.py  gemini_client.py  mapping_service.py  pay_service.py  pdf_service.py  pubsub.py  vlm_service.py
backend/app/workers/: job_runner.py
frontend/: README.md  vercel.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: mock-data.ts  types.ts
src/app/: globals.css
src/app/login/: page.tsx
src/components/agents/: extracted-fields.tsx  pay-forecast-graph.tsx
src/components/layout/: app-shell.tsx
src/lib/: mock-data.ts  utils.ts
test_src/: 근로계약서_데모1_김민준.docx  근로계약서_데모2_이수진.docx
(+39 files in other folders)
