[project]
name = "alba-chain-backend"
version = "0.1.0"
description = "알바체인 백엔드 - 근로계약서/대타·추가근무 Agent + 급여 계산"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "google-genai>=0.3",
    "jsonschema>=4.22",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
